--- a/index.html
+++ b/index.html
@@ -245,6 +245,31 @@
                                 </div>
                                 <div class="card-glow"></div>
                             </div>
+
+                    <div class="achievement-card glass-card" data-tilt data-tilt-max="5">
+                        <div class="achievement-icon glow-effect">
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="achievement-content">
+                            <div class="achievement-header">
+                                <h4>TryHackMe Hackfinity</h4>
+                                <span class="rank pulse-effect">#80</span>
+                            </div>
+                            <div class="achievement-meta">
+                                <span class="date"><i class="far fa-calendar-alt"></i> May 2025</span>
+                                <span class="category"><i class="fas fa-flag"></i> Competition</span>
+                            </div>
+                            <div class="achievement-progress">
+                                <div class="progress-wrapper">
+                                    <div class="progress-bar gradient-progress" data-progress="75">
+                                        <span class="progress-text">75%</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-glow"></div>
+                    </div>
+
                         </div>
                     </div>
 
