--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                         <i class="fas fa-home"></i>
                         <span>/home</span>
                     </a>
+                    <a class="nav-item glitch-hover" href="/page/search/" data-text="/search">
+                        <i class="fas fa-search"></i>
+                        <span>/search</span>
+                    </a>
                     <a class="nav-item glitch-hover" href="/page/team/" data-text="/team">
                         <i class="fas fa-users"></i>
                         <span>/team</span>
