--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <h2 class="section-title gradient-text">
                             <span class="terminal-prompt">$</span>
                             <span class="typing">Recent Activities</span>
-                            <span class="cursor">█</span>
+                            <span class="cursor"></span>
                         </h2>
                         <div class="terminal-line">
                             <span class="prompt">[*]</span>
@@ -428,10 +428,7 @@
             </div>
 
             <div class="footer-bottom glass-panel">
-                <div class="terminal-line">
-                    <span class="prompt">$</span>
-                    <span class="command">echo "© 2025 HowToPwn. All rights reserved."</span>
-                </div>
+                <span class="command">© 2025 HowToPwn. All rights reserved.</span>
             </div>
         </div>
     </footer>
