--- a/index.html
+++ b/index.html
@@ -30,18 +30,7 @@
     <header class="site-header glass-panel">
         <div class="wrapper">
             <div class="header-left">
-                <a class="site-title gradient-text" rel="author" href="/">
-                    <div class="terminal-header">
-                        <div class="terminal-buttons">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </div>
-                        <div class="terminal-title">
-                            <span class="font-mono">root@</span>HowToPwn<span class="font-mono">:~#</span>
-                        </div>
-                    </div>
-                </a>
+                <a class="site-title gradient-text" rel="author" href="/">HowToPwn</a>
             </div>
             <nav class="site-nav">
                 <div class="nav-items">
@@ -49,9 +38,9 @@
                         <i class="fas fa-home"></i>
                         <span>/home</span>
                     </a>
-                    <a class="nav-item glitch-hover" href="/about/" data-text="/team">
+                    <a class="nav-item glitch-hover" href="/about-us/" data-text="/team">
                         <i class="fas fa-users"></i>
-                        <span>/team</span>
+                        <span>/about</span>
                     </a>
                     <a class="nav-item glitch-hover" href="/services/" data-text="/services">
                         <i class="fas fa-cogs"></i>
@@ -90,7 +79,7 @@
                                 <span></span>
                                 <span></span>
                             </div>
-                            <div class="terminal-title">HowToPwn_Terminal</div>
+                            <div class="terminal-title"></div>
                         </div>
                         <div class="terminal-body">
                             <div class="line">
@@ -113,7 +102,7 @@
                     <div class="hero-subtitle-wrapper">
                         <p class="hero-subtitle">
                             <span class="typing-text"></span>
-                            <span class="cursor">█</span>
+                            <span class="cursor"></span>
                         </p>
                     </div>
                     
@@ -123,9 +112,9 @@
                                 <i class="fas fa-trophy"></i>
                             </div>
                             <div class="stat-value gradient-text">#54</div>
-                            <div class="stat-label">HTB Apocalypse</div>
+                            <div class="stat-label">Cyber Apocalypse CTF 2025</div>
                             <div class="stat-progress">
-                                <div class="progress-bar" data-progress="85"></div>
+                                <div class="progress-bar" data-progress="96"></div>
                             </div>
                         </div>
                         <div class="stat-item glass-panel" data-aos="fade-up" data-aos-delay="200" data-tilt>
@@ -133,7 +122,7 @@
                                 <i class="fas fa-medal"></i>
                             </div>
                             <div class="stat-value gradient-text">#80</div>
-                            <div class="stat-label">HTB Global</div>
+                            <div class="stat-label">HTB Team Global Rankings</div>
                             <div class="stat-progress">
                                 <div class="progress-bar" data-progress="75"></div>
                             </div>
@@ -142,10 +131,10 @@
                             <div class="stat-icon pulse-effect">
                                 <i class="fas fa-star"></i>
                             </div>
-                            <div class="stat-value gradient-text">#80</div>
-                            <div class="stat-label">THM Hackfinity</div>
+                            <div class="stat-value gradient-text">#82</div>
+                            <div class="stat-label">THM Hackfinity CTF 2025</div>
                             <div class="stat-progress">
-                                <div class="progress-bar" data-progress="75"></div>
+                                <div class="progress-bar" data-progress="98"></div>
                             </div>
                         </div>
                     </div>
@@ -170,17 +159,20 @@
 
         <!-- Recent Activities Section -->
         <section class="recent-activities" data-aos="fade-up">
-            <div class="wrapper">
-                <div class="section-header glass-panel">
+            <div class="wrapper">                <div class="section-header glass-panel" data-aos="fade-up">
                     <div class="section-header-content">
                         <h2 class="section-title gradient-text">
-                            <span class="terminal-prompt">$</span>
+                            <span class="terminal-prompt">[root@howtopwn]</span>
                             <span class="typing">Recent Activities</span>
                             <span class="cursor"></span>
                         </h2>
                         <div class="terminal-line">
                             <span class="prompt">[*]</span>
-                            <span class="command">Latest achievements and write-ups from our journey</span>
+                            <span class="command">Exploring the digital frontier: Our latest achievements and discoveries</span>
+                        </div>
+                        <div class="terminal-line">
+                            <span class="prompt">[+]</span>
+                            <span class="command">Status: Active | Security Level: Maximum | Team: Operational</span>
                         </div>
                     </div>
                     <div class="section-pattern"></div>
@@ -204,7 +196,7 @@
                                 </div>
                                 <div class="achievement-content">
                                     <div class="achievement-header">
-                                        <h4 class="gradient-text">HackTheBox Apocalypse</h4>
+                                        <h4 class="gradient-text">HackTheBox Cyber Apocalypse CTF 2025</h4>
                                         <span class="rank pulse-effect">#54</span>
                                     </div>
                                     <div class="achievement-meta">
@@ -213,8 +205,8 @@
                                     </div>
                                     <div class="achievement-progress">
                                         <div class="progress-wrapper">
-                                            <div class="progress-bar gradient-progress" data-progress="85">
-                                                <span class="progress-text">85%</span>
+                                            <div class="progress-bar gradient-progress" data-progress="96">
+                                                <span class="progress-text">96%</span>
                                             </div>
                                         </div>
                                     </div>
@@ -228,11 +220,11 @@
                                 </div>
                                 <div class="achievement-content">
                                     <div class="achievement-header">
-                                        <h4 class="gradient-text">HTB Global Rankings</h4>
+                                        <h4 class="gradient-text">HTB Team Global Rankings</h4>
                                         <span class="rank pulse-effect">#80</span>
                                     </div>
                                     <div class="achievement-meta">
-                                        <span class="date"><i class="far fa-calendar-alt"></i> June 2025</span>
+                                        <span class="date"><i class="far fa-calendar-alt"></i> May 2025</span>
                                         <span class="category"><i class="fas fa-chart-line"></i> Platform Ranking</span>
                                     </div>
                                     <div class="achievement-progress">
@@ -252,17 +244,17 @@
                         </div>
                         <div class="achievement-content">
                             <div class="achievement-header">
-                                <h4>TryHackMe Hackfinity</h4>
-                                <span class="rank pulse-effect">#80</span>
+                                <h4>TryHackMe Hackfinity CTF 2025</h4>
+                                <span class="rank pulse-effect">#82</span>
                             </div>
                             <div class="achievement-meta">
-                                <span class="date"><i class="far fa-calendar-alt"></i> May 2025</span>
-                                <span class="category"><i class="fas fa-flag"></i> Competition</span>
+                                <span class="date"><i class="far fa-calendar-alt"></i> Mar 2025</span>
+                                <span class="category"><i class="fas fa-flag"></i>CTF Competition</span>
                             </div>
                             <div class="achievement-progress">
                                 <div class="progress-wrapper">
-                                    <div class="progress-bar gradient-progress" data-progress="75">
-                                        <span class="progress-text">75%</span>
+                                    <div class="progress-bar gradient-progress" data-progress="98">
+                                        <span class="progress-text">98%</span>
                                     </div>
                                 </div>
                             </div>
@@ -368,7 +360,7 @@
                                 <span></span>
                                 <span></span>
                             </div>
-                            <span class="terminal-title">HowToPwn_Terminal</span>
+                            <span class="terminal-title"></span>
                         </div>
                         <div class="terminal-content">
                             <div class="terminal-line">
@@ -397,7 +389,7 @@
                 <nav class="footer-links">
                     <h3 class="footer-heading gradient-text">Navigation</h3>
                     <div class="footer-nav">
-                        <a href="/about/" class="nav-link glow-effect">./team</a>
+                        <a href="/about-us/" class="nav-link glow-effect">./about</a>
                         <a href="/services/" class="nav-link glow-effect">./services</a>
                         <a href="/writeups/" class="nav-link glow-effect">./writeups</a>
                         <a href="/contact/" class="nav-link glow-effect">./contact</a>
