--- a/blogs/index.html
+++ b/blogs/index.html
@@ -3,38 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Security Blog - HowToPwn</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/card-fixes.css">
-    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
-    <meta name="description" content="HowToPwn - Master cybersecurity through competition and expertise. Leading CTF team and cybersecurity consulting services.">
-    <meta name="keywords" content="CTF, cybersecurity, penetration testing, vulnerability assessment, incident response, security consulting">
-    <title>HowToPwn - Cybersecurity Excellence</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="dark-theme">
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="/">
-                <img src="images/logo.jpg" alt="HowToPwn Logo" class="logo">
+                <img src="../images/logo.jpg" alt="HowToPwn Logo" class="logo">
                 HowToPwn
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" title="Toggle navigation" aria-label="Toggle navigation">
@@ -42,10 +21,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="/services">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/blogs">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/blogs">Blog</a></li>
                     <li class="nav-item"><a class="nav-link" href="/reports">Reports</a></li>
                     <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
                 </ul>
@@ -53,167 +32,58 @@
         </div>
     </nav>
 
-    <main>
-        <section class="hero-section">
+    <main class="pt-5">
+        <section class="blog-header py-5 bg-gradient text-center">
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-6">
-                        <h1 class="display-3 mb-4">Master Cybersecurity Through Excellence</h1>
-                        <p class="lead mb-4">Join the elite team of security professionals breaking boundaries in CTF competitions and real-world cybersecurity.</p>
-                        <div class="hero-buttons">
-                            <a href="/services" class="btn btn-primary btn-lg me-3">Our Services</a>
-                            <a href="/blogs" class="btn btn-outline-light btn-lg">Latest Insights</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="hero-image-wrapper">
-                            <img src="images/hero_image.jpg" alt="Cybersecurity Excellence" class="img-fluid rounded-lg shadow-lg">
-                        </div>
-                    </div>
-                </div>
+                <h1 class="display-4 mb-4">Security Insights & Research</h1>
+                <p class="lead">Deep dives into cybersecurity, CTF competitions, and industry best practices.</p>
             </div>
         </section>
 
-        <section class="services-preview py-5 bg-gradient">
+        <section class="blog-posts py-5">
             <div class="container">
-                <h2 class="text-center mb-5">Our Expertise</h2>
-                <div class="row g-4">
-                    <div class="col-md-4">
-                        <div class="service-card card h-100">
-                            <div class="card-body text-center">
-                                <div class="service-icon mb-3">
-                                    <i class="fas fa-shield-alt fa-3x"></i>
-                                </div>
-                                <h3 class="h4">Penetration Testing</h3>
-                                <p>Comprehensive security assessments to identify vulnerabilities in your systems.</p>
-                                <a href="/services#pentest" class="btn btn-outline-primary mt-3">Learn More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="service-card card h-100">
-                            <div class="card-body text-center">
-                                <div class="service-icon mb-3">
-                                    <i class="fas fa-trophy fa-3x"></i>
-                                </div>
-                                <h3 class="h4">CTF Training</h3>
-                                <p>Expert-led training programs to enhance your CTF and security skills.</p>
-                                <a href="/services#training" class="btn btn-outline-primary mt-3">Learn More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="service-card card h-100">
-                            <div class="card-body text-center">
-                                <div class="service-icon mb-3">
-                                    <i class="fas fa-lock fa-3x"></i>
-                                </div>
-                                <h3 class="h4">Security Consulting</h3>
-                                <p>Strategic guidance to strengthen your organization's security posture.</p>
-                                <a href="/services#consulting" class="btn btn-outline-primary mt-3">Learn More</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="featured-posts py-5">
-            <div class="container">
-                <h2 class="text-center mb-5">Latest Security Insights</h2>
                 <div class="row g-4">
                     <div class="col-lg-4">
                         <article class="card h-100">
-                            <img src="images/adcs_hacking.png" class="card-img-top" alt="Web Security">
+                            <img src="../images/adcs_hacking.png" class="card-img-top" alt="ADCS Security">
                             <div class="card-body">
                                 <div class="post-meta mb-2">
                                     <small class="text-muted">July 8, 2025</small>
-                                    <span class="badge bg-primary ms-2">Windows Security</span>
+                                    <span class="badge bg-danger ms-2">Research</span>
                                 </div>
-                                <h3 class="h5">Understanding Modern XSS Prevention Techniques</h3>
-                                <p>Deep dive into modern Cross-Site Scripting prevention strategies and best practices.</p>
+                                <h2 class="h5">Breaking Active Directory Certificate Services</h2>
+                                <p>Deep dive into modern exploitation techniques for Active Directory Certificate Services (ADCS). Learn about common misconfigurations and their implications.</p>
                                 <a href="/blogs/breaking-active-directory-certificate-services-adcs/" class="btn btn-outline-primary">Read More →</a>
                             </div>
                         </article>
                     </div>
                     <div class="col-lg-4">
                         <article class="card h-100">
-                            <img src="images/howtopwn_thm_ctf.png" class="card-img-top" alt="CTF Competition">
+                            <img src="../images/howtopwn_thm_ctf.png" class="card-img-top" alt="CTF Competition">
                             <div class="card-body">
                                 <div class="post-meta mb-2">
                                     <small class="text-muted">July 5, 2025</small>
                                     <span class="badge bg-success ms-2">Events</span>
                                 </div>
-                                <h3 class="h5">HowToPwn Reached A Top 10 In Tndustrial Intrusion CTF 2025</h3>
-                                <p>Our team demonstrates exceptional skills in the TryHackMe's most prestigious cybersecurity competition.</p>
+                                <h2 class="h5">HowToPwn Reached Top 10 In Industrial Intrusion CTF 2025</h2>
+                                <p>Our team demonstrates exceptional skills in TryHackMe's most prestigious cybersecurity competition.</p>
                                 <a href="/blogs/ctf-championship" class="btn btn-outline-primary">Read More →</a>
                             </div>
                         </article>
                     </div>
                     <div class="col-lg-4">
                         <article class="card h-100">
-                            <img src="images/advance_web.png" class="card-img-top" alt="Security Tips">
+                            <img src="../images/advance_web.png" class="card-img-top" alt="Web Security">
                             <div class="card-body">
                                 <div class="post-meta mb-2">
                                     <small class="text-muted">July 1, 2025</small>
                                     <span class="badge bg-info ms-2">Tutorial</span>
                                 </div>
-                                <h3 class="h5">Advanced Web Application Security Testing Guide</h3>
+                                <h2 class="h5">Advanced Web Application Security Testing Guide</h2>
                                 <p>Learn professional techniques for identifying and exploiting web application vulnerabilities.</p>
                                 <a href="/blogs/webapp-security" class="btn btn-outline-primary">Read More →</a>
                             </div>
                         </article>
-                    </div>
-                </div>
-                <div class="text-center mt-5">
-                    <a href="/blogs" class="btn btn-primary btn-lg">View All Posts</a>
-                </div>
-            </div>
-        </section>
-
-        <section class="stats-section py-5 bg-dark">
-            <div class="container">
-                <div class="row g-4 text-center">
-                    <div class="col-md-3">
-                        <div class="stat-item">
-                            <h3>10+</h3>
-                            <p>CTFs Won</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="stat-item">
-                            <h3>200+</h3>
-                            <p>Security Audits</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="stat-item">
-                            <h3>20+</h3>
-                            <p>Members</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="stat-item">
-                            <h3>50+</h3>
-                            <p>Labs</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="newsletter-section py-5">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-6 text-center">
-                        <h2 class="mb-4">Stay Updated</h2>
-                        <p class="mb-4">Subscribe to our newsletter for the latest security insights and CTF updates.</p>
-                        <form class="newsletter-form">
-                            <div class="input-group mb-3">
-                                <input type="email" class="form-control" placeholder="Enter your email" aria-label="Email address">
-                                <button class="btn btn-primary" type="submit">Subscribe</button>
-                            </div>
-                        </form>
                     </div>
                 </div>
             </div>
@@ -260,6 +130,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="../js/scripts.js"></script>
 </body>
 </html>
