--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="manifest" href="favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <meta name="description" content="HowToPwn - Master cybersecurity through competition and expertise. Leading CTF team and cybersecurity consulting services.">
     <meta name="keywords" content="CTF, cybersecurity, penetration testing, vulnerability assessment, incident response, security consulting">
     <title>HowToPwn - Cybersecurity Excellence</title>
@@ -26,8 +27,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/card-fixes.css">
+    <link rel="stylesheet" href="css/maintenance-popup.css">
 </head>
 <body class="dark-theme">
+    <div id="maintenanceOverlay" class="maintenance-overlay"></div>
+    <div id="maintenancePopup" class="maintenance-popup">
+        <i class="fas fa-exclamation-triangle alert-icon"></i>
+        <h2>Website Maintenance Notice</h2>
+        <p>We are currently updating and improving our website to serve you better. During this time, some features may be temporarily unavailable.</p>
+        <p><strong>Expected completion: July 18, 2025</strong></p>
+        <p>Thank you for your patience and understanding.</p>
+        <button type="button" class="btn btn-primary" onclick="window.location.href='https://discord.gg/PPFZa9r6rk'">I Understand</button>
+    </div>
+
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="/">
@@ -259,4 +271,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
+</html>
 </html>
