--- a/blogs/index.html
+++ b/blogs/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Security Blog - HowToPwn</title>
+    <title>Intelligence Reports - HowToPwn</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="../css/styles.css">
@@ -35,8 +35,8 @@
     <main class="pt-5">
         <section class="blog-header py-5 bg-gradient text-center">
             <div class="container">
-                <h1 class="display-4 mb-4">Security Insights & Research</h1>
-                <p class="lead">Deep dives into cybersecurity, CTF competitions, and industry best practices.</p>
+                <h1 class="display-4 mb-4 text-gradient">CLASSIFIED.INTELLIGENCE.REPORTS</h1>
+                <p class="lead">Deep system infiltration analysis, cyber warfare tactics, and advanced exploitation methodologies.</p>
             </div>
         </section>
 
@@ -131,5 +131,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/scripts.js"></script>
+    <script src="../js/industrial-cyberpunk.js"></script>
+    <script src="../js/professional-interactions.js"></script>
 </body>
 </html>
