--- a/reports/index.html
+++ b/reports/index.html
@@ -19,9 +19,9 @@
     <link rel="manifest" href="favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
-    <meta name="description" content="HowToPwn - Master cybersecurity through competition and expertise. Leading CTF team and cybersecurity consulting services.">
-    <meta name="keywords" content="CTF, cybersecurity, penetration testing, vulnerability assessment, incident response, security consulting">
-    <title>HowToPwn - Cybersecurity Excellence</title>
+    <meta name="description" content="HowToPwn - Classified mission reports and tactical analysis. Advanced cybersecurity intelligence and operational documentation.">
+    <meta name="keywords" content="CTF, cybersecurity, penetration testing, vulnerability assessment, incident response, security consulting, tactical reports">
+    <title>Mission Reports - HowToPwn Command</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="../css/styles.css">
@@ -55,8 +55,8 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-8 mx-auto text-center">
-                        <h1 class="display-4 mb-4">Security Research Reports</h1>
-                        <p class="lead mb-4">Access our latest vulnerability research, CTF writeups, and security advisories.</p>
+                        <h1 class="display-4 mb-4 text-gradient">CLASSIFIED.MISSION.REPORTS</h1>
+                        <p class="lead mb-4">Access tactical analysis, vulnerability intelligence, and operational documentation from completed missions.</p>
                     </div>
                 </div>
             </div>
@@ -272,5 +272,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/scripts.js"></script>
+    <script src="../js/industrial-cyberpunk.js"></script>
+    <script src="../js/professional-interactions.js"></script>
 </body>
 </html>
